--- a/src/assets/css/galeria.css
+++ b/src/assets/css/galeria.css
@@ -1,9 +1,13 @@
 *{
   font-family: 'Quicksand', sans-serif;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 body{
-  min-width: 360px;
+  min-width: 360px; 
+  min-height: 100vh;
 }
 
 .galeria {
